# spatial-omics-gfm

./: .editorconfig  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.json  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION.md  BACKLOG.md  CI_CD_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_CHARTER.md  README.md  SECURITY_HARDENING.md  autonomous_sdlc_showcase.py  autonomous_sdlc_showcase_results.json  autonomous_sdlc_validation.json  basic_analysis_results.json  comprehensive_quality_gates_results.json  comprehensive_quality_validation.py  comprehensive_quality_validation_report.json  demo_spatial_gfm.py  enhanced_autonomous_sdlc_execution.py  enhanced_generation1_results.json  enhanced_quality_gates.py  enhanced_quality_results.json  final_autonomous_sdlc_completion.py  global_deployment_results.json  global_production_deployment.py  lightweight_test_results.json  optimized_generation3_results.json  production_quality_report.json  production_readiness_assessment.json  production_readiness_check.py  (+18 more)
.github/workflows/: ci-cd.yml  ci.yml
.terragon/: config.yaml  discovery-engine.py  value-metrics.json
config/: security.yaml
deployment/: config.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  healthcheck.py  nginx.conf
docs/: API.md  IMPLEMENTATION_SUMMARY.md  RESEARCH_PAPER_DRAFT.md  ROADMAP.md  ROBUSTNESS_FEATURES.md  TROUBLESHOOTING.md
docs/adr/: 0001-graph-transformer-architecture.md  README.md
examples/: README.md  basic_usage_example.py  complete_robustness_example.py  quick_start.py  research_demonstration.py  robustness_demo.py  simple_training_example.py  task_modules_usage.py  visualization_usage.py
examples/configs/: development_config.yaml  production_config.yaml
kubernetes/: deployment.yaml  production-deployment.yaml
scripts/: backup.py  fix_indentation.py  fix_syntax_issues.py  health_monitor.py  production_quality_check.py  quality_gates.py  restore.py  run_tests.py  security_scan.py
spatial_omics_gfm/: __init__.py  cli.py
spatial_omics_gfm/autonomous/: __init__.py  adaptive_learning.py  hypothesis_testing.py  quantum_adaptive_learning.py  sdlc_executor.py
spatial_omics_gfm/core/: __init__.py  enhanced_basic_example.py  optimized_framework.py  robust_framework.py  simple_example.py
spatial_omics_gfm/data/: __init__.py  augmentation.py  base.py  graph_construction.py  merfish.py  preprocessing.py  slideseq.py  visium.py  xenium.py
spatial_omics_gfm/deployment/: __init__.py  production_orchestrator.py
spatial_omics_gfm/global/: __init__.py  multi_region_deployment.py
spatial_omics_gfm/globalization/: __init__.py  compliance_engine.py  i18n_system.py  simple_i18n.py
spatial_omics_gfm/inference/: __init__.py  batch_inference.py  efficient_inference.py  enhanced_streaming.py  streaming_inference.py  uncertainty.py
spatial_omics_gfm/models/: __init__.py  advanced_deployment.py  deployment.py  graph_transformer.py  hierarchical_pooling.py  pretrained_models.py  spatial_attention.py
spatial_omics_gfm/performance/: __init__.py  caching.py  optimization.py  optimized_scaling.py  quantum_optimization.py  scalable_execution.py  simple_optimization.py  simple_scaling.py
spatial_omics_gfm/quality/: __init__.py  progressive_gates.py
spatial_omics_gfm/research/: __init__.py  adaptive_architecture.py  adaptive_attention_breakthrough.py  advanced_benchmarking.py  benchmarking.py  experimental_framework.py  fast_quantum_demo.py  hybrid_quantum_breakthrough.py  meta_research_engine.py  novel_attention.py  quantum_spatial_transformer.py  research_pipeline.py
spatial_omics_gfm/tasks/: README.md  __init__.py  base.py  cell_typing.py  interaction_prediction.py  pathway_analysis.py  tissue_segmentation.py
spatial_omics_gfm/testing/: __init__.py  comprehensive_quality_gates.py  lightweight_test_framework.py
spatial_omics_gfm/training/: __init__.py  contrastive_learning.py  curriculum_learning.py  distributed_training.py  fine_tuning.py  scalable_distributed_training.py
spatial_omics_gfm/utils/: __init__.py  advanced_caching.py  advanced_monitoring.py  auto_scaling.py  config_manager.py  config_manager_advanced.py.bak  cuda_kernels.py  enhanced_memory_management.py  enhanced_validators.py  helpers.py  logging_config.py  memory_management.py  memory_management_advanced.py.bak  memory_management_simple.py  metrics.py  optimization.py  security.py  simple_config_manager.py  simple_memory_management.py  (+2 more)
tests/: __init__.py  conftest.py  test_autonomous_sdlc.py  test_data.py  test_global_deployment.py  test_inference.py  test_models.py  test_robustness.py  test_tasks.py  test_training.py  test_utils.py
(+12 files in other folders)
